<resources>
    <string name="app_name">Online Parking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txtest">ACA VAN LAS ESTADISTICAS</string>
    <string name="txtscn">ACA VA EL ESCANER</string>
    <string name="txtmap">ACA VA EL MAPA</string>
    <string name="txtper">ACA VAN EL PERFIL</string>
    <string name="txtbien"> </string>
    <string name="nombre">KEVIN LIAO</string>
    <string name="textoQR">Tocar el boton para escanear</string>
    <string name="etiquetaName">Name: </string>
    <string name="etiquetaCellphone">Cellphone: </string>
    <string name="etiquetaCarplate">Carplate:  </string>

    <string name="btniniciosesion">Iniciar Sesión</string>
    <string name="btncrearcuenta">Crear Cuenta</string>
    <string name="textocuenta">¿No tiene una cuenta?</string>
    <string name="emailogin"> Correo Electrónico</string>
    <string name="contraseña"> Contraseña</string>
    <string name="contraseñaok">Contraseña</string>
    <string name="contraseñaok2">Confirmar contraseña</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="email">Correo Electrónico</string>
    <string name="btnconfirmar">Confirmar</string>
    <string name="btncancelar">Cancelar</string>
    <string name="txtcrearcuenta">Crear una cuenta</string>
    <string name="txtregistrarcuenta">Registrar cuenta</string>
    <string name="txtyatengocuenta">Ya tengo una cuenta</string>
    <string name="txtshowmail">Mail</string>
    <string name="txtshowpassword">Password</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
