<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".op_cuenta">

    <Button
        android:id="@+id/yaTengoCuenta"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/forma_boton"
        android:text="@string/btncancelar"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/nothing"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="339dp"
        android:layout_height="483dp"
        android:background="@drawable/forma_texto"
        app:layout_constraintBottom_toTopOf="@+id/yaTengoCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/txtdeco"
        android:layout_width="325dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtcrearcuenta"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/forma_texto"
        android:drawableRight="@drawable/usericon"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:maxLength="30"
        android:paddingLeft="20dp"
        android:paddingRight="14dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txtdeco"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/txtdeco"
        app:layout_constraintTop_toBottomOf="@+id/txtdeco" />

    <Button
        android:id="@+id/confirmar"
        android:layout_width="158dp"
        android:layout_height="64dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/forma_boton"
        android:text="@string/btnconfirmar"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña2"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/forma_texto"
        android:drawableRight="@android:drawable/ic_lock_lock"
        android:ems="10"
        android:hint="@string/contraseñaok"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:paddingLeft="20dp"
        android:paddingRight="14dp"
        />

    <EditText
        android:id="@+id/contraseña2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/forma_texto"
        android:drawableRight="@android:drawable/ic_lock_lock"
        android:ems="10"
        android:hint="@string/contraseñaok2"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/contraseña"
        android:paddingLeft="20dp"
        android:paddingRight="14dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/forma_texto"
        android:drawableRight="@drawable/gmail"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="14dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txtdeco"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/txtdeco"
        app:layout_constraintTop_toBottomOf="@+id/username" />

</android.support.constraint.ConstraintLayout>